# t-8

./: .gitignore  CMakeLists.txt  README.md  diagram.json  makefile  sdkconfig  wokwi.toml
.cache/clangd/index/: main.cpp.CC9F09C98E99D3F5.idx
firmware/: CMakeLists.txt  Config.hpp  README.md  idf_component.yml  main.cpp
firmware/Common/: data.hpp
firmware/Directive/: directive.MD  directive.hpp  types.hpp
firmware/Events/: BasicEmitter.hpp
firmware/Events/Frame/: data.hpp  emitter.hpp  event.hpp  types.hpp
firmware/Interfaces/: IDirectiveNode.hpp  IEmitterNode.hpp
firmware/Internal/: SubModuleRegistry.hpp  SubSystem.cpp  SubSystem.hpp
firmware/Internal/SubManager/: SubManager.hpp
firmware/Internal/SubModule/: AbstractSubModule.hpp  BasicSubModule.hpp  WifiSubMod.cpp  WifiSubMod.hpp
firmware/NotKernel/: SubModuleRegistry.hpp  SubSystem.cpp  SubSystem.hpp
firmware/Registries/: BasicRegistry.hpp
firmware/events/: BasicEmitter.hpp
firmware/events/frame/: data.hpp  emitter.hpp  event.hpp  types.hpp
firmware/old/services/: baseService.hpp  systemService.cpp  wsClient.cpp  wsClient.hpp
firmware/old/services/managers/: SystemServiceManager.cpp
firmware/old/tasks/: baseTask.cpp  baseTask.hpp  logTask.cpp  logTask.hpp
firmware/registries/: basicregistry.hpp
firmware/services/: systemService.cpp  systemService.hpp
firmware/services/managers/: BaseServiceManager.hpp
firmware/subsystem/submanager/: submanager.hpp
firmware/subsystem/submodule/: basicsubmodule.hpp
firmware/tasks/: base.cpp  base.hpp  baseTask.cpp  logTask.cpp  logTask.hpp  log_task.cpp  log_task.hpp
src/router/: main.go
src/router/helper/: queue.go  wsserver.go
src/sdlmenu/: bgdraw.go  colour.go  config.go  main.go  queue.go  wsclient.go
src/testclient/: go.sum  main.go
(+6 files in other folders)
